Accept other SMS State #78009

--- a/homeassistant/components/sms/translations/ca.json
+++ b/homeassistant/components/sms/translations/ca.json
@@ -12,7 +12,8 @@
             "user": {
                 "data": {
                     "baud_speed": "Velocitat en Baudis",
-                    "device": "Dispositiu"
+                    "device": "Dispositiu",
+                    "sms_state_config": "Accept SMS State"
                 },
                 "title": "Connexi\u00f3 al m\u00f2dem"
             }
