--- a/homeassistant/components/sms/translations/ko.json
+++ b/homeassistant/components/sms/translations/ko.json
@@ -12,7 +12,8 @@
             "user": {
                 "data": {
                     "baud_speed": "\uc804\uc1a1 \uc18d\ub3c4",
-                    "device": "\uae30\uae30"
+                    "device": "\uae30\uae30",
+                    "sms_state_config": "Accept SMS State"
                 },
                 "title": "\ubaa8\ub380\uc5d0 \uc5f0\uacb0\ud558\uae30"
             }
