--- a/homeassistant/components/sms/translations/lb.json
+++ b/homeassistant/components/sms/translations/lb.json
@@ -11,7 +11,8 @@
         "step": {
             "user": {
                 "data": {
-                    "device": "Apparat"
+                    "device": "Apparat",
+                    "sms_state_config": "Accept SMS State"
                 },
                 "title": "Mam Modem verbannen"
             }
