--- a/homeassistant/components/sms/translations/el.json
+++ b/homeassistant/components/sms/translations/el.json
@@ -12,7 +12,8 @@
             "user": {
                 "data": {
                     "baud_speed": "\u03a4\u03b1\u03c7\u03cd\u03c4\u03b7\u03c4\u03b1 Baud",
-                    "device": "\u03a3\u03c5\u03c3\u03ba\u03b5\u03c5\u03ae"
+                    "device": "\u03a3\u03c5\u03c3\u03ba\u03b5\u03c5\u03ae",
+                    "sms_state_config": "Accept SMS State"
                 },
                 "title": "\u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7 \u03c3\u03c4\u03bf \u03bc\u03cc\u03bd\u03c4\u03b5\u03bc"
             }
