--- a/homeassistant/components/sms/translations/ja.json
+++ b/homeassistant/components/sms/translations/ja.json
@@ -12,7 +12,8 @@
             "user": {
                 "data": {
                     "baud_speed": "\u30dc\u30fc\u30ec\u30fc\u30c8",
-                    "device": "\u30c7\u30d0\u30a4\u30b9"
+                    "device": "\u30c7\u30d0\u30a4\u30b9",
+                    "sms_state_config": "Accept SMS State"
                 },
                 "title": "\u30e2\u30c7\u30e0\u306b\u63a5\u7d9a"
             }
