--- a/homeassistant/components/sms/translations/pt-BR.json
+++ b/homeassistant/components/sms/translations/pt-BR.json
@@ -12,7 +12,8 @@
             "user": {
                 "data": {
                     "baud_speed": "Velocidade de transmiss\u00e3o",
-                    "device": "Dispositivo"
+                    "device": "Dispositivo",
+                    "sms_state_config": "Accept SMS State"
                 },
                 "title": "Conectado ao modem"
             }
