--- a/homeassistant/components/sms/translations/uk.json
+++ b/homeassistant/components/sms/translations/uk.json
@@ -11,7 +11,8 @@
         "step": {
             "user": {
                 "data": {
-                    "device": "\u041f\u0440\u0438\u0441\u0442\u0440\u0456\u0439"
+                    "device": "\u041f\u0440\u0438\u0441\u0442\u0440\u0456\u0439",
+                    "sms_state_config": "Accept SMS State"
                 },
                 "title": "\u041f\u0456\u0434\u043a\u043b\u044e\u0447\u0435\u043d\u043d\u044f \u0434\u043e \u043f\u0440\u0438\u0441\u0442\u0440\u043e\u044e"
             }
