--- a/homeassistant/components/proxmoxve/translations/en.json
+++ b/homeassistant/components/proxmoxve/translations/en.json
@@ -53,36 +53,36 @@
     },
     "issues": {
         "import_already_configured": {
-            "description": "The YAML configuration of the right {node} of {host}:{port} instance of {integration} (`{platform}`) already exists in the UI and was ignored on import.\n\nYou must remove this configuration from your configuration file .yaml and restart Home Assistant.",
-            "title": "YAML configuration already in the UI, can be removed"
+            "description": "The YAML configuration of the {node} of {host}:{port} instance of {integration} (`{platform}`) already exists in the UI and was ignored on import.\n\nYou must remove this configuration from your `configuration.yaml` file and restart Home Assistant.",
+            "title": "The node {node} of {host}:{port} already exists in the UI, can be removed"
         },
         "import_auth_error": {
-            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to authentication error.\n\nYou must remove this configuration from your configuration.yaml file, restart Home Assistant and configure it manually.",
-            "title": "Error in importing YAML configuration"
+            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to authentication error.\n\nYou must remove this configuration from your `configuration.yaml` file, restart Home Assistant and configure it manually.",
+            "title": "Error in importing YAML configuration from {host}:{port}"
         },
         "import_cant_connect": {
-            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to connection failed.\n\nYou must remove this configuration from your configuration.yaml file, restart Home Assistant and configure it manually.",
-            "title": "Error in importing YAML configuration"
+            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to connection failed.\n\nYou must remove this configuration from your `configuration.yaml` file, restart Home Assistant and configure it manually.",
+            "title": "Error in importing YAML configuration from {host}:{port}"
         },
         "import_general_error": {
-            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to unknown error.\n\nYou must remove this configuration from your configuration.yaml file, restart Home Assistant and configure it manually.",
-            "title": "Error in importing YAML configuration"
+            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to unknown error.\n\nYou must remove this configuration from your `configuration.yaml` file, restart Home Assistant and configure it manually.",
+            "title": "Error in importing YAML configuration from {host}:{port}"
         },
         "import_invalid_port": {
-            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to invalid port.\n\nYou must remove this configuration from your configuration.yaml file, restart Home Assistant and configure it manually.",
-            "title": "Error in importing YAML configuration"
+            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to invalid port.\n\nYou must remove this configuration from your `configuration.yaml` file, restart Home Assistant and configure it manually.",
+            "title": "Error in importing YAML configuration from {host}:{port}"
         },
         "import_node_not_exist": {
-            "description": "The {node} of the {host}:{port} instance of {integration} (`{platform}`) present in the YAML configuration does not exist in this instance and was ignored in the import.\n\nYou must remove this configuration from your .yaml configuration and restart Home Assistant.",
+            "description": "The {node} of the {host}:{port} instance of {integration} (`{platform}`) present in the YAML configuration does not exist in this instance and was ignored in the import.\n\nYou must remove this configuration from your `configuration.yaml` file and restart Home Assistant.",
             "title": "Node {node} does not exist in {host}:{port}"
         },
         "import_ssl_rejection": {
-            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to SSL rejection.\n\nYou must remove this configuration from your configuration.yaml file, restart Home Assistant and configure it manually.",
-            "title": "Error in importing YAML configuration"
+            "description": "Importing YAML configuration from {host}:{port} instance of {integration} (`{platform}`) failed due to SSL rejection.\n\nYou must remove this configuration from your `configuration.yaml` file, restart Home Assistant and configure it manually.",
+            "title": "Error in importing YAML configuration from {host}:{port}"
         },
         "import_success": {
-            "description": "The YAML configuration of node {node} of {host}:{port} instance of {integration} (`{platform}`) has been imported into the UI automatically.\n\nCan be safely removed from your configuration.yaml file.",
-            "title": "Configuration in YAML file has been imported and can be removed"
+            "description": "The YAML configuration of node {node} of {host}:{port} instance of {integration} (`{platform}`) has been imported into the UI automatically.\n\nCan be safely removed from your `configuration.yaml` file.",
+            "title": "Node {node} of {host}:{port} was imported from YAML configuration"
         },
         "yaml_deprecated": {
             "description": "Configuration of the {integration} (`{platform}`) in YAML is deprecated and should be removed in 2022.12. Resolve the import issues and remove the YAML configuration from your `configuration.yaml` file.",
