--- a/homeassistant/components/amberelectric/translations/en.json
+++ b/homeassistant/components/amberelectric/translations/en.json
@@ -15,6 +15,11 @@
                 },
                 "description": "Go to {api_url} to generate an API key"
             }
+        },
+        "error": {
+          "invalid_api_token": "Invalid API key",
+          "no_site": "No site provided",
+          "unknown_error": "Unexpected error"
         }
     }
 }
