--- a/homeassistant/components/forecast_solar/translations/en.json
+++ b/homeassistant/components/forecast_solar/translations/en.json
@@ -22,6 +22,7 @@
                     "azimuth": "Azimuth (360 degrees, 0 = North, 90 = East, 180 = South, 270 = West)",
                     "damping": "Damping factor: adjusts the results in the morning and evening",
                     "declination": "Declination (0 = Horizontal, 90 = Vertical)",
+                    "horizon": "Horizon heights as list of degrees (0,0,0,10,20,20,20)",
                     "inverter_size": "Inverter size (Watt)",
                     "modules power": "Total Watt peak power of your solar modules"
                 },
