--- a/homeassistant/components/switchbee/translations/en.json
+++ b/homeassistant/components/switchbee/translations/en.json
@@ -10,13 +10,13 @@
       },
       "step": {
           "user": {
+            "description": "Setup SwitchBee integration with Home Assistant.",
               "data": {
                   "host": "Central Unit IP address",
                   "username": "User (e-mail)",
                   "password": "Password",
                   "switch_as_light": "Initialize switches as light entities"
-              },
-              "title": "Setup SwitchBee Central Unit"
+              }
           }
       }
   },
