--- a/homeassistant/components/rainmachine/translations/en.json
+++ b/homeassistant/components/rainmachine/translations/en.json
@@ -24,11 +24,11 @@
                 "step": {
                     "confirm": {
                         "description": "This entity has been replaced by `{replacement_entity_id}`.",
-                        "title": "The {removed_entity_id} entity has been removed"
+                        "title": "The {old_entity_id} entity will be removed"
                     }
                 }
             },
-            "title": "The {removed_entity_id} entity has been removed"
+            "title": "The {old_entity_id} entity will be removed"
         }
     },
     "options": {
