--- a/homeassistant/components/ibeacon/translations/en.json
+++ b/homeassistant/components/ibeacon/translations/en.json
@@ -5,7 +5,7 @@
         },
         "step": {
             "user": {
-                "description": "Do you want to setup Bluetooth LE Tracker?"
+                "description": "Do you want to setup iBeacon Tracker?"
             }
         }
     }
