--- a/homeassistant/components/rainmachine/translations/en.json
+++ b/homeassistant/components/rainmachine/translations/en.json
@@ -23,7 +23,7 @@
             "fix_flow": {
                 "step": {
                     "confirm": {
-                        "description": "This entity has been replaced by `{replacement_entity_id}`.",
+                        "description": "Update any automations or scripts that use this entity to instead use `{replacement_entity_id}`.",
                         "title": "The {old_entity_id} entity will be removed"
                     }
                 }
