--- a/homeassistant/components/nibe_heatpump/translations/en.json
+++ b/homeassistant/components/nibe_heatpump/translations/en.json
@@ -1,11 +1,9 @@
 {
     "config": {
-        "abort": {
-            "already_configured": "Device is already configured"
-        },
         "error": {
             "address": "Invalid remote IP address specified. Address must be a IPV4 address.",
-            "address_in_use": "The selected listening port is already in use on this system. Reconfigure your gateway device to use a different address if the conflict can not be resolved.",
+            "address_in_use": "The selected listening port is already in use on this system.",
+            "model": "The model selected doesn't seem to support modbus40",
             "read": "Error on read request from pump. Verify your `Remote read port` or `Remote IP address`.",
             "unknown": "Unexpected error",
             "write": "Error on write request to pump. Verify your `Remote write port` or `Remote IP address`."
