--- a/homeassistant/components/radarr/translations/fr.json
+++ b/homeassistant/components/radarr/translations/fr.json
@@ -16,7 +16,7 @@
                 "description": "L'int\u00e9gration Radarr doit \u00eatre r\u00e9-authentifi\u00e9e manuellement avec l'API Radarr",
                 "title": "R\u00e9-authentifier l'int\u00e9gration"
             },
-            "user": {
+            "manual": {
                 "data": {
                     "api_key": "Cl\u00e9 d'API",
                     "url": "URL",
