--- a/homeassistant/components/sensor/translations/en.json
+++ b/homeassistant/components/sensor/translations/en.json
@@ -6,6 +6,7 @@
             "is_carbon_dioxide": "Current {entity_name} carbon dioxide concentration level",
             "is_carbon_monoxide": "Current {entity_name} carbon monoxide concentration level",
             "is_current": "Current {entity_name} current",
+            "is_distance": "Current {entity_name} distance",
             "is_energy": "Current {entity_name} energy",
             "is_frequency": "Current {entity_name} frequency",
             "is_gas": "Current {entity_name} gas",
@@ -36,6 +37,7 @@
             "carbon_dioxide": "{entity_name} carbon dioxide concentration changes",
             "carbon_monoxide": "{entity_name} carbon monoxide concentration changes",
             "current": "{entity_name} current changes",
+            "distance": "{entity_name} distance changes",
             "energy": "{entity_name} energy changes",
             "frequency": "{entity_name} frequency changes",
             "gas": "{entity_name} gas changes",
