Add options flow to Google Sheets

--- a/homeassistant/components/google_sheets/translations/en.json
+++ b/homeassistant/components/google_sheets/translations/en.json
@@ -31,5 +31,14 @@
                 "title": "Reauthenticate Integration"
             }
         }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "sheets_access": "Home Assistant access to Google Sheets"
+                }
+            }
+        }
     }
 }
